style changes: slides are better spaced, confirm buttons align correct

--- a/public/scss/prototype/six.scss
+++ b/public/scss/prototype/six.scss
@@ -83,13 +83,13 @@ button {
 @mixin action_button_container {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: stretch;
   justify-content: center;
   padding: 20px;
   border-top: 1px solid #ecf0f1;
   button {
-
+    margin: 0 10px;
   }
 }
 
@@ -219,12 +219,13 @@ $page_width: 75vw;
     // flex-direction: column;
     .slide {
       width: 100%;
-      height: 60px;
+      min-height: 60px;
       // border: 1px dashed tomato;
       padding: 5px 0;
       position: relative;
       display: flex;
       .slide__idx {
+        width: 20px;
         margin: 8px;
         color: #bec3c7;
         font-size: .8em;
@@ -905,13 +906,13 @@ $page_width: 75vw;
                   object-fit: contain;
                 }
               }
-              &:nth-child(2) img { filter: hue-rotate(250deg); }
-              &:nth-child(3) img { filter: hue-rotate(350deg); }
-              &:nth-child(4) img { filter: hue-rotate(100deg); }
-              &:nth-child(5) img { filter: hue-rotate(200deg); }
-              &:nth-child(6) img { filter: hue-rotate(300deg); }
-              &:nth-child(7) img { filter: hue-rotate(150deg); }
-              &:nth-child(8) img { filter: hue-rotate(50deg); }
+              // &:nth-child(2) img { filter: hue-rotate(250deg); }
+              // &:nth-child(3) img { filter: hue-rotate(350deg); }
+              // &:nth-child(4) img { filter: hue-rotate(100deg); }
+              // &:nth-child(5) img { filter: hue-rotate(200deg); }
+              // &:nth-child(6) img { filter: hue-rotate(300deg); }
+              // &:nth-child(7) img { filter: hue-rotate(150deg); }
+              // &:nth-child(8) img { filter: hue-rotate(50deg); }
               &.active {
                 button {
                   border-color: #1ac6e8;
